--- a/app/globals.css
+++ b/app/globals.css
@@ -9,7 +9,7 @@
 
 @font-face {
     font-family: 'IRANSans';
-    src: url('/fonts/Iransans/IRANSans.eot') format('eot'), url('/fonts/Iransans/IRANSans.ttf') format('truetype'), url('/fonts/Iransans/IRANSans.woff') format('woff');
+    src: url('/assets/font/Iransans/IRANSans.eot') format('eot'), url('/assets/font/Iransans/IRANSans.ttf') format('truetype'), url('/assets/font/Iransans/IRANSans.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -43,26 +43,62 @@
 body {
     direction: rtl;
     background-color: #fff;
-    font-family: IranSans;
+    font-family: IRANSans;
 }
 
 .logo {
     height: 26px;
 }
 
-body aside {
-    width: 200px;
-    height: calc(100vh - 109px);
+header .menu-icon span {
+    display: block;
+    width: 100%;
+    height: 3px;
+    background-color: #151515;
+    margin: 6px 0;
+    border-radius: 5px;
+    transition: all 0.5s ease 0s;
 }
 
-body .wrapper {
-    width: calc(100% - 200px);
+header .menu-icon[open] span {
+    width: 20px;
 }
 
 body header .profile_list ul[open] {
     display: block;
 }
 
-aside .menu .current {
+body main aside {
+    width: 200px;
+    height: calc(100vh - 109px);
+    transition: all 0.5s ease 0s;
+}
+
+body main[open] aside {
+    width: 70px;
+}
+
+body main aside ul li a span {
+    opacity: 1;
+    transition: all 0.5s ease 1s;
+    white-space: nowrap;
+}
+
+body main[open] aside ul li a span {
+    opacity: 0;
+    transition: none !important;
+    display: none;
+}
+
+main aside .menu .current {
     @apply bg-gray-200
+}
+
+body main .wrapper {
+    width: calc(100% - 200px);
+    transition: all 0.5s ease 0s;
+}
+
+body main[open] .wrapper {
+    width: calc(100% - 70px);
 }
