--- a/app/globals.css
+++ b/app/globals.css
@@ -61,7 +61,7 @@ header .menu-icon span {
 }
 
 header .menu-icon[open] span {
-    width: 20px;
+    width: 25px;
 }
 
 body header .profile_list ul[open] {
@@ -109,4 +109,20 @@ body main .videos h2 {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+}
+
+body main .videos .video-img:after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 12%);
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 5px;
+}
+
+body main .videos .video-img {
+    position: relative;
+    opacity: 0.9;
 }
