--- a/app/globals.css
+++ b/app/globals.css
@@ -50,18 +50,31 @@ body {
     height: 26px;
 }
 
+header .menu-icon {
+    border-radius: 50%;
+    height: 40px;
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px;
+    align-items: center;
+    width: 40px;
+    cursor: pointer;
+    position: relative;
+    top: 0;
+    right: 0;
+}
+
 header .menu-icon span {
     display: block;
     width: 100%;
-    height: 3px;
+    height: 2px;
     background-color: #151515;
-    margin: 6px 0;
     border-radius: 5px;
-    transition: all 0.5s ease 0s;
 }
 
-header .menu-icon[open] span {
-    width: 25px;
+header .menu-icon[open] {
+    @apply bg-gray-100
 }
 
 body header .profile_list ul[open] {
@@ -78,16 +91,14 @@ body main[open] aside {
     width: 70px;
 }
 
-body main aside ul li a span {
-    opacity: 1;
-    transition: all 0.5s ease 1s;
+main aside .menu a {
+    overflow: hidden;
+    text-overflow: ellipsis;
     white-space: nowrap;
 }
 
-body main[open] aside ul li a span {
-    opacity: 0;
-    transition: none !important;
-    display: none;
+body main[open] aside .menu a {
+    font-size: 0;
 }
 
 main aside .menu .current {
@@ -125,4 +136,12 @@ body main .videos .video-img:after {
 body main .videos .video-img {
     position: relative;
     opacity: 0.9;
+}
+
+@media (max-width: 767px) {
+    header .menu-icon {
+        position: absolute;
+        top: 100px;
+        right: 15px;
+    }
 }
