--- a/public/assets/css/globals.css
+++ b/public/assets/css/globals.css
@@ -20,3 +20,8 @@ body {
     background-color: #fff;
     font-family: IRANSans;
 }
+
+.Toastify .Toastify__toast-body {
+    font-family: IRANSans;
+    font-size: 13px;
+}
